<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    android:layout_margin="16dp"
    android:gravity="center"
    android:id="@+id/songItem"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true">
<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/image"
    android:layout_width="70dp"
    android:layout_height="70dp"
    android:src="@drawable/img"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginStart="14dp">

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tumPremHo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
             />
        <TextView
            android:id="@+id/singer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singer"
            android:textSize="14sp"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
             />
    </LinearLayout>
    <TextView
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/duration"
        android:textColor="#000"
        android:textSize="14sp"
        android:gravity="end"
        android:paddingTop="9dp"
        android:textStyle="bold"
        />


</LinearLayout>