<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlaySong">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CDECFB">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nowPlaying"
            android:textColor="#D7000000"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.841"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/volumeBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_volume_up_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.126">

            <ImageView
                android:id="@+id/albumImage"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/songName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/love"
            android:textSize="18sp"

            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"

            app:layout_constraintBottom_toTopOf="@+id/lottieAnimationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.75" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.192"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/play_lottie"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
            app:layout_constraintVertical_bias="1.0">


            <ImageButton
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_share" />

            <ImageButton
                android:id="@+id/minus10Sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"

                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_replay_10" />

            <ImageButton
                android:id="@+id/shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_shuffle" />

            <ImageButton
                android:id="@+id/add10Sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"


                android:src="@drawable/ic_forward_10" />
            <ImageButton
                android:id="@+id/autoPlay"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:gravity="bottom"
                android:layout_marginStart="18dp"
                android:background="?android:attr/selectableItemBackground"



                android:src="@drawable/ic_auto_play" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="bottom|center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ongoingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/onGoingTime"
                    android:textColor="#000"
                    />
                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"


                    />
                <TextView
                    android:id="@+id/endingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/endingTime"
                    android:textColor="#000"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center"
                android:orientation="horizontal">



                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/previousBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rippleColor="#19AA28"
                    app:elevation="5dp"
                    app:fabCustomSize="64dp"
                    app:fabSize="normal"
                    android:layout_margin="16dp"
                    app:maxImageSize="50dp"
                    android:src="@drawable/ic_backward" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/playPause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_pause"

                    app:elevation="5dp"
                    app:fabCustomSize="64dp"
                    app:fabSize="normal"
                    app:maxImageSize="50dp"
                    app:rippleColor="#19AA28" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/nextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rippleColor="#19AA28"
                    app:elevation="5dp"
                    app:fabCustomSize="64dp"
                    app:fabSize="normal"
                    android:layout_margin="16dp"
                    app:maxImageSize="50dp"
                    android:src="@drawable/ic_forward" />




            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/snowfall2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
</FrameLayout>